--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 #root {
-  /* max-width: 700px; */
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 600px;
+  /* margin: 0 auto; */
+  padding: 1.5rem;
+  /* text-align: center; */
+}
+
+.kumbh-font {
+  font-family: 'Kumbh Sans', system-ui, Avenir, Helvetica, Arial, sans-serif,
 }
